tests/ui/suggestions/issue-72766.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/issue-72766.rs:14:5
   |
LL |     SadGirl {}.call()?;
   |     ^^^^^^^^^^^^^^^^^^ the `?` operator cannot be applied to type `impl Future<Output = Result<(), ()>>`
   |
   = help: the trait `Try` is not implemented for `impl Future<Output = Result<(), ()>>`
help: consider `await`ing on the `Future`
   |
LL |     SadGirl {}.call().await?;
   |                      ++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
